fixed overflow at liveSearch

--- a/web/PTGL3/custom/css/styles.css
+++ b/web/PTGL3/custom/css/styles.css
@@ -245,7 +245,7 @@ Notes: 		Hand coded for www.vplg.org
 		outline: 0px none;
 		display: none;
 		max-height: 150px;
-		overflow: scroll;
+		overflow-y: scroll;
 		width: 301px;
 		
 		}
